# static-linking-example

./: Cargo.toml  Makefile  README.md  dependency.wit  guest.wit  host.wit
dependency/: Cargo.toml
dependency/src/: bindings.rs  lib.rs
guest/: Cargo.toml
guest/src/: bindings.rs  lib.rs
host/: Cargo.toml
host/src/: bindings.rs  main.rs
