[package]
name = "host"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
wasmer = "2.2.0"
wit-bindgen-wasmer = { git = "https://github.com/wasmerio/wit-bindgen" }
